jsonschemadsl2ecore.trafo.opt/test/test97/validtests/example7.test97
{
	"prop1":["foo",1],
	"prop2":["qux"],
	"prop3":["bar",1,true,false]
} 