jsonschemadsl2ecore.trafo.opt/test/test97/invalidtests/example5.test97
{
	"prop1":["foo",1],
	"prop2":["foo","maxitems is 1"],
	"prop3":["bar"]
} 